Replace React to SolidJS and added HopeUI

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     },
     "scripts": {
         "dev": "turbo run dev",
+        "watch": "turbo run watch",
         "build": "turbo run build",
         "start": "node apps/api/dist/main"
     },
