Add individual screens

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,9 @@
         "@hope-ui/solid": "^0.6.7",
         "@solidjs/router": "^0.8.2",
         "@stitches/core": "^1.2.8",
+        "@tanstack/table-core": "^8.8.5",
+        "i": "^0.3.7",
+        "npm": "^9.6.3",
         "solid-icons": "^1.0.4",
         "solid-js": "^1.6.10",
         "solid-transition-group": "^0.0.10"
