--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,10 +7,12 @@
         "start": "vite",
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview"
+        "serve": "vite preview",
+        "server": "json-server --watch ./dummy_data/db.js --port 3004 --routes routes.json --delay 1000"
     },
     "license": "MIT",
     "devDependencies": {
+        "json-server": "^0.17.3",
         "typescript": "^4.9.5",
         "vite": "^4.1.1",
         "vite-plugin-solid": "^2.5.0"
