add tickets data

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -15,3 +15,8 @@ JWT_REFRESH_TOKEN_TTL = 86400
 
 # Session
 SESSION_SECRET= SECRET_SESSION
+
+# Skybox
+APPLICATION_TOKEN= 98e15ea8-c8a1-470f-96b1-7a8e8b123da5
+API_TOKEN= 8742e7a0-b363-432c-ade4-ac2ab7f302ea
+ACCOUNT= 2072
