--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,11 +35,13 @@
         "class-validator": "^0.14.0",
         "connect-redis": "^6.0.1",
         "cookie-parser": "^1.4.6",
-        "dayjs": "^1.11.7",
         "express-session": "^1.17.3",
         "ioredis": "^5.3.2",
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
         "nest-puppeteer": "^1.1.1",
         "passport": "^0.6.0",
         "pg": "^8.10.0",
@@ -60,6 +62,7 @@
         "@types/express-session": "^1.17.7",
         "@types/jest": "29.2.4",
         "@types/jsonwebtoken": "^9.0.1",
+        "@types/lodash": "^4.14.195",
         "@types/node": "18.11.18",
         "@types/passport": "^1.0.12",
         "@types/supertest": "^2.0.11",
