--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,12 +30,16 @@
         "@nestjs/schedule": "^2.2.1",
         "@nestjs/serve-static": "^3.0.1",
         "@nestjs/typeorm": "^9.0.1",
+        "await-to-js": "^3.0.0",
         "bcrypt": "^5.1.0",
+        "cheerio": "^1.0.0-rc.12",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "connect-redis": "^6.0.1",
         "cookie-parser": "^1.4.6",
         "express-session": "^1.17.3",
+        "fetch-cookie": "^2.1.0",
+        "fetch-retry-ts": "^1.3.0",
         "ioredis": "^5.3.2",
         "joi": "^17.9.1",
         "jsonwebtoken": "^9.0.0",
@@ -43,8 +47,11 @@
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.43",
         "nest-puppeteer": "^1.1.1",
+        "nestjs-playwright": "^1.1.1",
+        "node-fetch-cookies": "^2.1.0",
         "passport": "^0.6.0",
         "pg": "^8.10.0",
+        "playwright": "^1.38.1",
         "puppeteer": "^20.2.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
