--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,10 +1,10 @@
 # Database
-DATABASE_TYPE = postgres
+DATABASE_TYPE = mysql
 DATABASE_HOST = localhost
-DATABASE_PORT = 5432
-DATABASE_USERNAME = postgres
-DATABASE_PASSWORD =
-DATABASE_NAME = nestjs_basics
+DATABASE_PORT = 3306
+DATABASE_USERNAME = root
+DATABASE_PASSWORD = example
+DATABASE_NAME = itch_tickets
 DATABASE_AUTO_LOAD_ENTITIES = true
 DATABASE_SYNCHRONIZE = true
 
