--- a/apps/api/.env
+++ b/apps/api/.env
@@ -3,7 +3,7 @@ DATABASE_TYPE = mysql
 DATABASE_HOST = localhost
 DATABASE_PORT = 3306
 DATABASE_USERNAME = root
-DATABASE_PASSWORD = example
+DATABASE_PASSWORD = root
 DATABASE_NAME = itch_tickets
 DATABASE_AUTO_LOAD_ENTITIES = true
 DATABASE_SYNCHRONIZE = true
