--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,9 +1,9 @@
 # Database
 DATABASE_TYPE = mysql
-DATABASE_HOST = localhost
+DATABASE_HOST = 127.0.0.1
 DATABASE_PORT = 3306
 DATABASE_USERNAME = root
-DATABASE_PASSWORD = root
+DATABASE_PASSWORD = password
 DATABASE_NAME = itch_tickets
 DATABASE_AUTO_LOAD_ENTITIES = true
 DATABASE_SYNCHRONIZE = true
